<resources>
    <string name="app_name">Foodies</string>
    <string name="splash_image">Splash image</string>
    <string name="splash_text">Foodies</string>
    <string name="intro_header">Before we get cookin\'</string>
    <string name="submit">Submit</string>
    <string name="todays_picks">Today\'s Picks</string>
    <string name="todays_joke">Today\'s Joke</string>
    <string name="auth_header">Login</string>
    <string name="auth_info">Please provide us with your email address.</string>
    <string name="login_forgot">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="loading">Loading…</string>
    <string name="name_label">Your email address</string>
    <string name="password_label">Your password</string>
    <string name="reset_header">Reset password</string>
    <string name="reset_info">Enter your email address below and well send you a link to reset your password via email.</string>
    <string name="send_email">send email</string>
    <string name="ingredients">Ingredients</string>
    <string name="equipment">Equipment</string>
    <string name="procedure">Procedure</string>
    <string name="favorites">Favorites</string>
    <string name="todays_trivia">Today\'s Trivia</string>
    <string name="fridge">What\'s in your fridge?</string>
    <string name="fridge_instructions">Get recipes based on the ingredients available in your fridge.</string>
    <string name="search">Search</string>
    <string name="search_query">Search :  %1$s</string>
    <string name="read_more">Read More</string>
    <string name="cook_time">Ready in %1$d minutes.</string>
    <string name="servings">Serves %1$d people.</string>
    <string name="empty_search">No %1$s found :(</string>
    <string name="favorites_home">What do you like?</string>
    <string name="favorites_instructions">Save your favorite recipes so that you can view them any day</string>
    <string name="fridge_activity">Search by ingredients</string>
    <string name="ingredients_instructions">Enter the ingredients you have…</string>
    <string name="prepare">Prepare</string>
    <string name="intolerances">My Intolerances</string>
    <string name="not_found">No %1$s found</string>
    <string name="share_recipe">Do you know how to make %1$s? 😋 \n Check out the recipe on http://foodies.moose.ac/recipes?id=%2$d. 🍳</string>
    <string name="recipe_search">Search for a recipe</string>
    <string name="recipe_hint">e.g. fish fillet</string>
    <string name="test_recipe">Something with something else</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="ingredient_hint">e.g. baking flour</string>
    <string name="missed_ingredients">What you are missing :</string>
    <string name="amount">%1$s %2$d</string>
</resources>
