<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".features.reset.ResetPasswordActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_header"
        android:fontFamily="@font/bold"
        android:textColor="@color/dark_text"
        android:layout_margin="10dp"
        android:textSize="25sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reset_info"
        android:fontFamily="@font/regular"
        android:textColor="@color/dark_text"
        android:layout_margin="10dp"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_label"
        android:layout_margin="15dp"
        app:boxStrokeColor="@color/dark_text"
        app:hintTextColor="@color/dark_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:cursorVisible="false"
            android:id="@+id/email"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:id="@+id/reset_btn"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:textColor="@color/light_text"
        android:background="@drawable/round_button"
        android:text="@string/send_email"/>

    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/resetloading"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:loading_width="5dp"
        android:visibility="gone"
        app:loading_color="@color/accent"/>

</LinearLayout>