<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/recipe_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_food"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_collapseMode="parallax"
                    android:adjustViewBounds="true" />
            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_text"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/regular"
                android:text="@string/ingredients"
                android:padding="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:id="@+id/ingredients_recycler"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:padding="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_text"
                android:textSize="15sp"
                android:fontFamily="@font/regular"
                android:text="@string/equipment"
                android:padding="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:id="@+id/equipment_recycler"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:padding="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_text"
                android:textSize="15sp"
                android:fontFamily="@font/regular"
                android:text="@string/procedure"
                android:padding="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:id="@+id/procedure_recycler"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:padding="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>