<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_layout"
    tools:context=".features.home.HomeActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:id="@+id/home_swipe">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".features.home.HomeActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <com.mancj.materialsearchbar.MaterialSearchBar
                        style="@style/MaterialSearchBarLight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:elevation="5dp"
                        android:id="@+id/searchBar"
                        app:mt_hint="Search for a recipe"
                        app:mt_maxSuggestionsCount="10"/>

                </androidx.cardview.widget.CardView>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todays_picks"
                        android:fontFamily="@font/regular"
                        android:textColor="@color/dark_text"
                        android:textSize="20sp"
                        android:layout_margin="5dp"/>

                    <com.jama.carouselview.CarouselView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/carousel"
                        app:enableSnapping="true"
                        app:scaleOnScroll="true"
                        app:carouselOffset="center"
                        app:indicatorAnimationType="slide"
                        app:indicatorRadius="5"
                        app:indicatorPadding="5"
                        app:indicatorSelectedColor="@color/accent"
                        app:spacing="10"
                        app:resource="@layout/carousel_item"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todays_joke"
                        android:fontFamily="@font/regular"
                        android:textColor="@color/dark_text"
                        android:textSize="20sp"
                        android:layout_marginTop="50dp"
                        android:padding="5dp"/>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/joke"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/dark_text"
                    android:textSize="15sp"
                    android:layout_margin="10dp"/>


                <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/todays_trivia"
                        android:fontFamily="@font/regular"
                        android:textColor="@color/dark_text"
                        android:textSize="20sp"
                        android:layout_marginTop="50dp"
                        android:padding="5dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/trivia"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/dark_text"
                    android:textSize="15sp"
                    android:layout_margin="10dp"/>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.nightonke.boommenu.BoomMenuButton
        android:id="@+id/bmb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:bmb_normalColor="@color/light_text"
        app:bmb_buttonEnum="simpleCircle"
        app:elevation="10dp"/>

</RelativeLayout>
